# vehicle_interface

./: .gitignore  CMakeLists.txt  package.xml
msg/: AcousticDataMessage.msg  AcousticGPSLandmark.msg  AcousticLandmark.msg  AcousticWaypointMessage.msg  MapInfo.msg  PilotPathRequest.msg  PilotWaypointRequest.msg  WaypointStatus.msg
srv/: AlarmStoppedTracking.srv  ClearPathService.srv  GetNextBestView.srv  MapMergingInfo.srv  PlannerBatteryRequest.srv  PlannerHardwareCheckRequest.srv  PlannerRelocDone.srv  PlannerRelocRequest.srv  RelocalisationRequest.srv  RelocalisationTransformRequest.srv  StartToGoalPlanningRequest.srv  VerifyPath.srv
